Fix table cell widths jumping around

--- a/src/components/GamesPlayed/Row/styles.css
+++ b/src/components/GamesPlayed/Row/styles.css
@@ -1,4 +1,8 @@
 
-.action-buttons-cell {
+.row--editable :global(td) {
   width: 25%;
+}
+
+.row :global(td) {
+  width: 33%;
 }
